--- a/source/As.Posterr.Domain/As.Posterr.Domain.csproj
+++ b/source/As.Posterr.Domain/As.Posterr.Domain.csproj
@@ -19,7 +19,11 @@
       <DependentUpon>Messages.resx</DependentUpon>
     </Compile>
   </ItemGroup>
-
+  <ItemGroup>
+    <AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleTo">
+      <_Parameter1>As.Posterr.Test</_Parameter1>
+    </AssemblyAttribute>
+  </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Update="Fields.resx">
       <Generator>ResXFileCodeGenerator</Generator>
