--- a/source/As.Posterr.Test/As.Posterr.Test.csproj
+++ b/source/As.Posterr.Test/As.Posterr.Test.csproj
@@ -8,12 +8,14 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.7.1" />
+    <PackageReference Include="Moq" Version="4.18.1" />
     <PackageReference Include="MSTest.TestAdapter" Version="2.1.1" />
     <PackageReference Include="MSTest.TestFramework" Version="2.1.1" />
     <PackageReference Include="coverlet.collector" Version="1.3.0" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\As.Posterr.Application\As.Posterr.Application.csproj" />
     <ProjectReference Include="..\As.Posterr.Domain\As.Posterr.Domain.csproj" />
   </ItemGroup>
 
