--- a/source/As.Posterr.Api/As.Posterr.Api.csproj
+++ b/source/As.Posterr.Api/As.Posterr.Api.csproj
@@ -7,6 +7,7 @@
   <ItemGroup>
     <PackageReference Include="FluentMediator" Version="0.4.7" />
     <PackageReference Include="FluentMediator.Microsoft.Extensions.DependencyInjection" Version="0.4.7" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.3.1" />
   </ItemGroup>
 
